--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetailsEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetailsEditor.html
@@ -18,6 +18,15 @@
                 </vr-columns>
 
 
+
+                <vr-columns colnum="2">
+                    <vr-label>Related Numbers:</vr-label>
+                </vr-columns>
+                <vr-columns colnum="2">
+                    <vr-select datasource="relatedNumbers"  selectedvalues="selectedRelatedNumbers" isrequired></vr-select>
+                </vr-columns>
+
+
               
             </vr-row>
 
