adding datagrid directive
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23934

--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Test.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Test.html
@@ -58,7 +58,7 @@
 
         </vr-row>
 
-        <vr-row>
+        <!--<vr-row>
             <vr-columns colnum="12" simplecol>
                 <vr-section title="Top chart">
                     <vr-chart data-on-ready="chartTopReady"></vr-chart>
@@ -82,5 +82,5 @@
 
                     </vr-datagrid>
                 </vr-columns>
-            </vr-row>
+            </vr-row>-->
 </div>
