--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetailsEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetailsEditor.html
@@ -23,7 +23,7 @@
                     <vr-label>Related Numbers:</vr-label>
                 </vr-columns>
                 <vr-columns colnum="2">
-                    <vr-select datasource="relatedNumbers"  selectedvalues="selectedRelatedNumbers" isrequired></vr-select>
+                    <vr-select datasource="relatedNumbers" selectedvalues="selectedRelatedNumber" onselectionchanged="selectedRelatedNumbersChanged"></vr-select>
                 </vr-columns>
 
 
