--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetails.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetails.html
@@ -1,6 +1,6 @@
-﻿<div vr-modalcontent width="'75%'" ng-controller="StrategyEditorController">
+﻿<div vr-modalcontent width="'75%'" ng-controller="SuspiciousNumberDetailsController">
     <vr-modalbody vr-loader="isGettingData">
-        <vr-form name="formStrategyEditor">
+        <vr-form name="formSuspiciousNumberDetails">
             <vr-row>
                 <vr-columns colnum="2">
                     <vr-label>Subscriber Number:</vr-label>
@@ -27,7 +27,7 @@
                 </vr-columns>
 
 
-              
+
             </vr-row>
 
             <vr-row>
@@ -48,8 +48,8 @@
                                         <vr-datagridcolumn headertext="'Connect'" field="'ConnectDateTime'" widthfactor="17">  </vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'Duration'" field="'DurationInSeconds'" widthfactor="5">  </vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'Class'" field="'CallClass'" widthfactor="10">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'Type'" field="'CallType'" widthfactor="10" >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'SubType'" field="'SubType'" widthfactor="10" >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'Type'" field="'CallType'" widthfactor="10">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'SubType'" field="'SubType'" widthfactor="10">  </vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'IMEI'" field="'IMEI'" widthfactor="13">  </vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'Cell Id'" field="'CellId'" widthfactor="10">  </vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'Up Volume'" field="'UpVolume'" widthfactor="10">  </vr-datagridcolumn>
@@ -59,7 +59,7 @@
                                     </vr-datagrid>
 
                                 </div>
-                                <div ng-show="ctrl.isNumberProfileTabShown" style="width:200%"   >
+                                <div ng-show="ctrl.isNumberProfileTabShown" style="width:200%">
                                     <vr-datagrid datasource="numberProfiles" maxheight="300px" loadmoredata="loadMoreDataNumberProfiles" on-ready="onNumberProfilesGridReady">
                                         <vr-datagridcolumn headertext="'From Date'" field="'FromDate'" widthfactor="13">  </vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'To Date'" field="'ToDate'" widthfactor="13">  </vr-datagridcolumn>
@@ -90,7 +90,7 @@
                             </vr-columns>
                         </vr-row>
                     </div>
-                    </vr-columns>
+                </vr-columns>
 
             </vr-row>
 
