--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPTrackingModal.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPTrackingModal.html
@@ -1,10 +1,13 @@
-﻿<div vr-modalcontent ng-controller="BPTrakingModalController as ctrl">
-    <vr-modalbody width="'50%'" vr-loader="::ctrl.isGettingData">
+﻿<div vr-modalcontent ng-controller="BusinessProcess_BPTrackingModalController as ctrl">
+    <vr-modalbody width="'50%'" vr-loader="ctrl.isGettingData">
         <vr-form name="formBPTrackingModal">
             <vr-row>
                 <vr-columns colnum="12">
-
-
+                    <vr-datagrid datasource="::ctrl.datasource" loadmoredata="ctrl.loadMoreData" on-ready="ctrl.onGridReady" >
+                        <vr-datagridcolumn headertext="'Message'" field="'Message'" widthfactor="50"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Severity'" field="'SeverityDescription'" widthfactor="20"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Event Time'" widthfactor="30">{{dataItem.EventTime | date:'yyyy-MM-dd hh:mm:ss' }}</vr-datagridcolumn>
+                    </vr-datagrid>
                 </vr-columns>
             </vr-row>
         </vr-form>
