--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspicionAnalysis.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspicionAnalysis.html
@@ -10,10 +10,10 @@
                     <vr-select datasource="suspicionLevels" datatextfield="name" datavaluefield="id" label="Suspicion Levels" isrequired selectedvalues="selectedSuspicionLevels" ismultipleselection></vr-select>
                 </vr-columns>
                 <vr-columns colnum="2">
-                    <vr-datetimepicker type="date" value="fromDate" label="From" isrequired></vr-datetimepicker>
+                    <vr-datetimepicker type="date" value="fromDate" label="From" isrequired customvalidate="customvalidateFrom"></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns colnum="2">
-                    <vr-datetimepicker type="date" value="toDate" label="To" isrequired customvalidate="customvalidateTestTo"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" value="toDate" label="To" isrequired customvalidate="customvalidateTo"></vr-datetimepicker>
                 </vr-columns>
             </vr-row>
             <vr-row></vr-row>
