--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingManagement/RoutingManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingManagement/RoutingManagement.html
@@ -49,19 +49,15 @@
                     <vr-datagridcolumn headertext="'Rate'" field="'Rate'">
                     </vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Rate'">
-                        <div ng-repeat="supplierOption in routingDataSource">
-                            <div ng-repeat="option in supplierOption.Options">{{option.Rate | number:4}}</div>
-                        </div>
+                        <span ng-repeat="option in dataItem.Options">{{option.Rate | number:4}}</span>
                     </vr-datagridcolumn>
+                    <vr-datagridexpandablerow>
+                        {{dataItem.Options}}
+                    </vr-datagridexpandablerow>
                 </vr-datagrid>
             </vr-columns>
         </vr-row>
-        <div>
-            <div ng-repeat="supplierOption in routingDataSource">
-                <div ng-repeat="option in supplierOption.Options">{{option.Rate | number:4}}</div>
-            </div>
-        </div>
-        <div ng-include="'/Client/Modules/Routing/Views/RoutingManagement/Test.html'"></div>
+       
     </div>
 
 </vr-panel>
