--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/RouteRuleEditor.html
@@ -2,7 +2,7 @@
     <vr-modalbody maxheight="'1200px'" vr-loader="isGettingData">
 
         <vr-form name="formRouteRuleEditor">
-            <vr-row>
+            <vr-row removeline>
                 <vr-columns colnum="6">
                     <vr-choices on-ready="choicesRuleTypeReady">
                         <vr-choice isselected="choiceRuleDefinitionSelected">Rule Definition</vr-choice>
