--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
@@ -67,7 +67,10 @@
                     <vr-label>Exchange accounts</vr-label>
                     <vr-switch value="params.isExchange"></vr-switch>
                 </vr-columns>
-
+                <vr-columns colnum="3" ng-if="reporttype.ParameterSettings.RequiresTop">
+                    <vr-label>Top</vr-label>
+                    <number-filed input-value="params.top" />
+                </vr-columns>
             </vr-row>
         </div>
     </vr-form>
